<resources>
    <string name="app_name">Refrigerator</string>


    <!-- common -->
    <string name="cancel">취소</string>
    <string name="setting">설정</string>

    <!-- permission -->
    <string name="permission_checking">네트워크에 연결되어있지 않습니다</string>
    <string name="index_message">냉장고를 부탁해!</string>
    <string name="permission_setting_title">권한 설정</string>
    <string name="permission_setting_message">앱을 실행하기 위해서는 권한 설정을 해야 합니다.</string>
    <string name="permission_setting_restart">권한을 설정하고 다시 실행해 주세요!</string>


    <!-- 음식 등록 화면 -->
    <string name="food_name">이름</string>
    <string name="category">유형</string>
    <string name="expiration_date">유통기한</string>
    <string name="expiration_date_direct_input">직접 입력</string>
    <string name="search">조회</string>
    <string name="regist">등록</string>

    <!--유통기한 설명 화면 -->
    <string name="information"> 평균 유통기한 \n \n 과일 -7일 \n 채소 -6일 \n 생선 -3일 \n 해산물 - 1주 \n 육류 - 4일</string>

    <!--저장된 음식 조회 화면-->
    <string name="no_data">없음</string>


</resources>
